--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
             android:contentDescription="@string/app_name" />
 
         <EditText
+            android:id="@+id/searchText"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
