--- a/app/src/main/res/drawable/note_item_bg.xml
+++ b/app/src/main/res/drawable/note_item_bg.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#4DD0E1"/>
+    <solid android:color="?colorOnBackground"/>
     <corners android:radius="@dimen/_10sdp"/>
 </shape>
